--- a/Assignment3/A3.ipynb
+++ b/Assignment3/A3.ipynb
@@ -11,6 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## PROBELM 9\n",
     "### (a) Which of the predictors are quantitative, and which are qualitative?\n",
     "Qualitative:\n",
     "- name, origin\n",
@@ -383,6 +384,13 @@
     "\n",
     "df.plot(x='mpg', y = 'weight', kind='scatter')\n",
     "df.plot(x='mpg', y = 'cylinders', kind='scatter')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PROBELM 10"
    ]
   },
   {
