--- a/Assignment3/A3.ipynb
+++ b/Assignment3/A3.ipynb
@@ -395,10 +395,225 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>crim</th>\n",
+       "      <th>zn</th>\n",
+       "      <th>indus</th>\n",
+       "      <th>chas</th>\n",
+       "      <th>nox</th>\n",
+       "      <th>rm</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dis</th>\n",
+       "      <th>rad</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>ptratio</th>\n",
+       "      <th>lstat</th>\n",
+       "      <th>medv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00632</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>6.575</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>4.0900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>296</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.02731</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>6.421</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>4.9671</td>\n",
+       "      <td>2</td>\n",
+       "      <td>242</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>9.14</td>\n",
+       "      <td>21.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.02729</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>7.185</td>\n",
+       "      <td>61.1</td>\n",
+       "      <td>4.9671</td>\n",
+       "      <td>2</td>\n",
+       "      <td>242</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.03237</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>6.998</td>\n",
+       "      <td>45.8</td>\n",
+       "      <td>6.0622</td>\n",
+       "      <td>3</td>\n",
+       "      <td>222</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>33.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.06905</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>7.147</td>\n",
+       "      <td>54.2</td>\n",
+       "      <td>6.0622</td>\n",
+       "      <td>3</td>\n",
+       "      <td>222</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>36.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     crim    zn  indus  chas    nox     rm   age     dis  rad  \\\n",
+       "0           1  0.00632  18.0   2.31     0  0.538  6.575  65.2  4.0900    1   \n",
+       "1           2  0.02731   0.0   7.07     0  0.469  6.421  78.9  4.9671    2   \n",
+       "2           3  0.02729   0.0   7.07     0  0.469  7.185  61.1  4.9671    2   \n",
+       "3           4  0.03237   0.0   2.18     0  0.458  6.998  45.8  6.0622    3   \n",
+       "4           5  0.06905   0.0   2.18     0  0.458  7.147  54.2  6.0622    3   \n",
+       "\n",
+       "   tax  ptratio  lstat  medv  \n",
+       "0  296     15.3   4.98  24.0  \n",
+       "1  242     17.8   9.14  21.6  \n",
+       "2  242     17.8   4.03  34.7  \n",
+       "3  222     18.7   2.94  33.4  \n",
+       "4  222     18.7   5.33  36.2  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (a)\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "df = pd.read_csv('Boston.csv')\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 506\n",
+      "\n",
+      "Columns: 14\n",
+      "crim: per capita crime rate by town\n",
+      "zn: proportion of residential land zoned for lots over 25,000 sq ft\n",
+      "indus: proportion of non-retail business acres per town\n",
+      "chas: Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)\n",
+      "nox: nitrogen oxides concentration (parts per 10 million)\n",
+      "rm: average number of rooms per dwelling\n",
+      "age: proportion of owner-occuped units built prior to 1940\n",
+      "dis: weighted mean of distances to five Boston employment centres\n",
+      "rad: index of accessibility to radical highways\n",
+      "tax: full-value property-tax rate per $10,000\n",
+      "ptratio: pupil-teacher ratio by town\n",
+      "lstat: lower status of the population (percent)\n",
+      "medv: median value of owner-occupied homes in $1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "## (b)\n",
+    "row_count = len(df.axes[0])\n",
+    "print('Rows:', row_count)\n",
+    "print('')\n",
+    "col_count = len(df.axes[1])\n",
+    "print('Columns:', col_count)\n",
+    "print('crim: per capita crime rate by town')\n",
+    "print('zn: proportion of residential land zoned for lots over 25,000 sq ft')\n",
+    "print('indus: proportion of non-retail business acres per town')\n",
+    "print('chas: Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)')\n",
+    "print('nox: nitrogen oxides concentration (parts per 10 million)')\n",
+    "print('rm: average number of rooms per dwelling')\n",
+    "print('age: proportion of owner-occuped units built prior to 1940')\n",
+    "print('dis: weighted mean of distances to five Boston employment centres')\n",
+    "print('rad: index of accessibility to radical highways')\n",
+    "print('tax: full-value property-tax rate per $10,000')\n",
+    "print('ptratio: pupil-teacher ratio by town')\n",
+    "print('lstat: lower status of the population (percent)')\n",
+    "print('medv: median value of owner-occupied homes in $1000')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## (c)\n"
+   ]
   }
  ],
  "metadata": {
