--- a/Assignment3/A3.ipynb
+++ b/Assignment3/A3.ipynb
@@ -1200,6 +1200,281 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (f)\n",
+    "np.sum(df['chas'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.455533596837945"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (g)\n",
+    "np.mean(df['ptratio'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>crim</th>\n",
+       "      <th>zn</th>\n",
+       "      <th>indus</th>\n",
+       "      <th>chas</th>\n",
+       "      <th>nox</th>\n",
+       "      <th>rm</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dis</th>\n",
+       "      <th>rad</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>ptratio</th>\n",
+       "      <th>lstat</th>\n",
+       "      <th>medv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>399</td>\n",
+       "      <td>38.3518</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.693</td>\n",
+       "      <td>5.453</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.4896</td>\n",
+       "      <td>24</td>\n",
+       "      <td>666</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>30.59</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0     crim   zn  indus  chas    nox     rm    age     dis  rad  \\\n",
+       "398         399  38.3518  0.0   18.1     0  0.693  5.453  100.0  1.4896   24   \n",
+       "\n",
+       "     tax  ptratio  lstat  medv  \n",
+       "398  666     20.2  30.59   5.0  "
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (h)\n",
+    "df.sort_values('medv', ascending=True).head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>crim</th>\n",
+       "      <th>zn</th>\n",
+       "      <th>indus</th>\n",
+       "      <th>chas</th>\n",
+       "      <th>nox</th>\n",
+       "      <th>rm</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dis</th>\n",
+       "      <th>rad</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>ptratio</th>\n",
+       "      <th>lstat</th>\n",
+       "      <th>medv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00632</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.385</td>\n",
+       "      <td>3.561</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>1.1296</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>506</td>\n",
+       "      <td>88.97620</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>27.74</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.871</td>\n",
+       "      <td>8.780</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>12.1265</td>\n",
+       "      <td>24</td>\n",
+       "      <td>711</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>37.97</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0      crim     zn  indus  chas    nox     rm    age      dis  \\\n",
+       "min           1   0.00632    0.0   0.46     0  0.385  3.561    2.9   1.1296   \n",
+       "max         506  88.97620  100.0  27.74     1  0.871  8.780  100.0  12.1265   \n",
+       "\n",
+       "     rad  tax  ptratio  lstat  medv  \n",
+       "min    1  187     12.6   1.73   5.0  \n",
+       "max   24  711     22.0  37.97  50.0  "
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (h)\n",
+    "def predictors_range(df):\n",
+    "    mins = [np.min(df[column]) for column in df.columns]\n",
+    "    maxs = [np.max(df[column]) for column in df.columns]\n",
+    "    return pd.DataFrame([mins, maxs], columns=df.columns, index=['min', 'max'])\n",
+    "predictors_range(df)\n",
+    "## Based on results below, the suburb with the lowest medv is on border\n",
+    "## most predictor ranges. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 14)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (i)\n",
+    "df[df['rm']>7].shape\n",
+    "    # 64 have more than 7 rooms per dwelling. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13, 14)"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (i)\n",
+    "df[df['rm']>8].shape\n",
+    "    # 13 have more than 8 rooms per dwelling. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
