--- a/Assignment3/A3.ipynb
+++ b/Assignment3/A3.ipynb
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
        "(13, 14)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,15 +1470,167 @@
    "source": [
     "## (i)\n",
     "df[df['rm']>8].shape\n",
-    "    # 13 have more than 8 rooms per dwelling. "
+    "    # 13 have more than 8 rooms per dwelling. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>crim</th>\n",
+       "      <th>zn</th>\n",
+       "      <th>indus</th>\n",
+       "      <th>chas</th>\n",
+       "      <th>nox</th>\n",
+       "      <th>rm</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dis</th>\n",
+       "      <th>rad</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>ptratio</th>\n",
+       "      <th>lstat</th>\n",
+       "      <th>medv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>98</td>\n",
+       "      <td>0.12083</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.4450</td>\n",
+       "      <td>8.069</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>3.4952</td>\n",
+       "      <td>2</td>\n",
+       "      <td>276</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>4.21</td>\n",
+       "      <td>38.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>164</td>\n",
+       "      <td>1.51902</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6050</td>\n",
+       "      <td>8.375</td>\n",
+       "      <td>93.9</td>\n",
+       "      <td>2.1620</td>\n",
+       "      <td>5</td>\n",
+       "      <td>403</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>3.32</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>205</td>\n",
+       "      <td>0.02009</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.4161</td>\n",
+       "      <td>8.034</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>5.1180</td>\n",
+       "      <td>4</td>\n",
+       "      <td>224</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>225</td>\n",
+       "      <td>0.31533</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5040</td>\n",
+       "      <td>8.266</td>\n",
+       "      <td>78.3</td>\n",
+       "      <td>2.8944</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>4.14</td>\n",
+       "      <td>44.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>226</td>\n",
+       "      <td>0.52693</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5040</td>\n",
+       "      <td>8.725</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>2.8944</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0     crim    zn  indus  chas     nox     rm   age     dis  rad  \\\n",
+       "97           98  0.12083   0.0   2.89     0  0.4450  8.069  76.0  3.4952    2   \n",
+       "163         164  1.51902   0.0  19.58     1  0.6050  8.375  93.9  2.1620    5   \n",
+       "204         205  0.02009  95.0   2.68     0  0.4161  8.034  31.9  5.1180    4   \n",
+       "224         225  0.31533   0.0   6.20     0  0.5040  8.266  78.3  2.8944    8   \n",
+       "225         226  0.52693   0.0   6.20     0  0.5040  8.725  83.0  2.8944    8   \n",
+       "\n",
+       "     tax  ptratio  lstat  medv  \n",
+       "97   276     18.0   4.21  38.7  \n",
+       "163  403     14.7   3.32  50.0  \n",
+       "204  224     14.7   2.88  50.0  \n",
+       "224  307     17.4   4.14  44.8  \n",
+       "225  307     17.4   4.63  50.0  "
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (i)\n",
+    "df[df['rm']>8].head()\n",
+    "    ## Similar nox, lstat, and medv values. "
+   ]
   }
  ],
  "metadata": {
